[package]
name = "csvdimreduce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.74"
csv = "1.2.2"
interpolation = "0.2.0"
ndarray = "0.15.6"
number_range = "0.3.2"
rand = "0.8.5"
trimothy = "0.1.8"
xflags = "0.3.1"
